--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -1,83 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cadastro</title>
-  <link rel="stylesheet" href="style-cadastro/cadastro.css" />
-  <link rel="stylesheet" href="style-cadastro/cadastro-querey.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="style-cadastro/cadastro.css" media="all">
+    <link rel="stylesheet" href="style-cadastro/cadastro-querey.css" media="screen">
+    <title>Cadastro</title>
 </head>
 <body>
-  <main class="conteiner__principal">
-    <section class="login-container">
-      <h1>Cadastro</h1>
-      <form id="registerForm" action="/cadastro" method="POST">
-        <div class="input-container">
-          <i class="fa-solid fa-user"></i>
-          <input type="text" id="username" name="nome" placeholder="Nome de usuário" required />
+    <main class="conteiner__principal">
+        <section class="login-container">
+            <h1>Cadastro</h1>
+            <!-- O formulário envia os dados para a rota /cadastro com o método POST -->
+            <form id="registerForm" action="/cadastro" method="POST">
+                <div class="input-container">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" id="username" name="nome" placeholder="Nome de usuário" required>
+                </div>
+
+                <div class="input-container">
+                    <i class="fa-solid fa-envelope"></i>
+                    <input type="email" id="email" name="email" placeholder="E-mail" required>
+                </div>
+
+                <div class="input-container">
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" id="password" name="senha" placeholder="Senha" required>
+                    <span class="toggle-password" data-target="password">
+                        <i class="fa-solid fa-eye"></i>
+                    </span>
+                </div>
+
+                <div class="input-container">
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" id="confirmPassword" name="confirmarSenha" placeholder="Confirme a senha" required>
+                    <span class="toggle-password" data-target="confirmPassword">
+                        <i class="fa-solid fa-eye"></i>
+                    </span>
+                </div>
+
+                <p id="error-message" class="error-message"></p>
+
+                <button type="submit">Cadastrar</button>
+            </form>
+
+            <p>Já tem uma conta? <a href="../login/login.html" target="_self">Entrar agora</a></p>
+        </section>
+
+        <div class="imagem">
+            <img src="imagem-cadastro/pessoa-ao-lado.png" alt="Pessoa ao lado">
         </div>
+    </main>
 
-        <div class="input-container">
-          <i class="fa-solid fa-envelope"></i>
-          <input type="email" id="email" name="email" placeholder="E-mail" required />
-        </div>
+    <script>
+        // Alternar exibição de senha
+        document.addEventListener("DOMContentLoaded", function () {
+            const toggleButtons = document.querySelectorAll(".toggle-password");
 
-        <div class="input-container">
-          <i class="fa-solid fa-lock"></i>
-          <input type="password" id="password" name="senha" placeholder="Senha" required />
-          <span class="toggle-password" onclick="togglePassword('password', this)">
-            <i class="fa-solid fa-eye"></i>
-          </span>
-        </div>
+            toggleButtons.forEach(button => {
+                button.addEventListener("click", () => {
+                    const inputId = button.getAttribute("data-target");
+                    const input = document.getElementById(inputId);
+                    const icon = button.querySelector("i");
 
-        <div class="input-container">
-          <i class="fa-solid fa-lock"></i>
-          <input type="password" id="confirmPassword" name="confirmarSenha" placeholder="Confirme a senha" required />
-          <span class="toggle-password" onclick="togglePassword('confirmPassword', this)">
-            <i class="fa-solid fa-eye"></i>
-          </span>
-        </div>
-
-        <p id="error-message" class="error-message" style="display:none; color:red;"></p>
-
-        <button type="submit">Cadastrar</button>
-      </form>
-      <p>Já tem uma conta? <a href="../login/login.html">Entrar agora</a></p>
-    </section>
-
-    <div class="imagem">
-      <img src="imagem-cadastro/pessoa-ao-lado.png" alt="Pessoa ao lado" />
-    </div>
-  </main>
-
-  <script>
-    document.getElementById("registerForm").addEventListener("submit", function (event) {
-      const password = document.getElementById("password").value;
-      const confirmPassword = document.getElementById("confirmPassword").value;
-      const errorMessage = document.getElementById("error-message");
-
-      if (password !== confirmPassword) {
-        event.preventDefault();
-        errorMessage.textContent = "As senhas não coincidem!";
-        errorMessage.style.display = "block";
-      } else {
-        errorMessage.style.display = "none";
-      }
-    });
-
-    function togglePassword(inputId, iconSpan) {
-      const input = document.getElementById(inputId);
-      const icon = iconSpan.querySelector("i");
-
-      if (input.type === "password") {
-        input.type = "text";
-        icon.classList.replace("fa-eye", "fa-eye-slash");
-      } else {
-        input.type = "password";
-        icon.classList.replace("fa-eye-slash", "fa-eye");
-      }
-    }
-  </script>
+                    if (input) {
+                        if (input.type === "password") {
+                            input.type = "text";
+                            icon.classList.remove("fa-eye");
+                            icon.classList.add("fa-eye-slash");
+                        } else {
+                            input.type = "password";
+                            icon.classList.remove("fa-eye-slash");
+                            icon.classList.add("fa-eye");
+                        }
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
